contact now form right panel header finalized

--- a/Lab-4 (II)/style.css
+++ b/Lab-4 (II)/style.css
@@ -9,8 +9,14 @@
 
 .header, .footer {
     background-color: #C7C7C7;
-    height: 20%;
 }
+.header {
+    height: 25%;
+}
+.footer {
+    height: 15%;
+}
+
 .main {
     height: 59%;
     background-color: #FAFAFA;
@@ -27,7 +33,7 @@
     background-color: #4DB6E3;
     padding: 3%;
     width: 35%;
-    height: 100%;
+    height: 90%;
 }
 
 input {
@@ -37,8 +43,9 @@ input {
     border: none;
 }
 
-::placeholder {
+input::placeholder {
     color: #FFFFFF;
+    padding-left: 1%;
 }
 
 button {
@@ -46,7 +53,7 @@ button {
     color: #FFFFFF;
     border: none;
     height: 8%;
-    margin: 3px;
+    margin-top: 10%;
 }
 
 button:hover {
@@ -59,12 +66,33 @@ h1 {
 
 .right-panel {
     background-color: orange;
-    width: 65%;
+    flex-flow: column wrap;
+    width: 55%;
+    height: 100%;
 }
 
-.header {
-    background-color: firebrick;
+.right-header {
+    justify-content: center;
+    padding: 3%;
+    gap: 10px;
+    font-size: 130%;
+    color: #FFFFFF;
 }
-.footer {
-    background-color: blue;
+.right-header-item {
+    width: 45px;
+    height: 45px; 
+    justify-content: center;
+    align-items: center;
+}
+.blue-box { 
+    background-color: #395a91;
+}
+.light-blue-box {
+    background-color: #08B5E0;
+}
+.pink-box {
+    background-color: #FF69B4;
+}
+.gray-box {
+    background-color: #605F5F;
 }
