--- a/Lab-4 (I)/style.css
+++ b/Lab-4 (I)/style.css
@@ -3,7 +3,7 @@
     color: #FFFFFF;
 }
 main {
-    height: 100vh;
+    height: 90vh;
 }
 
 .flex {
@@ -29,6 +29,10 @@ header {
 
 section h1 {
     text-align: right;
+    font-size: 6rem;
+}
+button {
+    font-size: 1.1rem;
 }
 .m-btn-group {
     justify-content: space-between;
