Form Validation done and uploaded

--- a/Lab-6 (form validation)/style.css
+++ b/Lab-6 (form validation)/style.css
@@ -1,3 +1,9 @@
 form{
     background-color: #424242;
 }
+@media (max-width: 768px) {
+    .radiobtn {
+        display: flex;
+        flex-direction: column;
+    }
+}
